Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86598

Assistant fails to compile if QT_NO_CLIPBOARD is defined

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 5.15.2, 6.1.0 RC
    • 5.15.1
    • Tools: Assistant
    • None
    • QNX 7.1 x86_64
      GCC 8.3
    • QNX
    • 979f7fe10b2c2a921efa483afe887c7d17297fc7 (qt/qttools/dev) 3c9315592180e8ae0404bccd4a843bac977c589c (qt/qttools/5.15)

    Description

      The CentralWidget class defines the copy() slot conditionally, only if QT_NO_CLIPBOARD is not defined. But the GlobalActions constructor connects to this slot unconditionally, resulting in a build error.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jkobus Jarek Kobus
            elahav Elad Lahav
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes