Assistant: fix build with QT_NO_CLIPBOARD

Fixes: QTBUG-86598
Change-Id: I02348fc3b3b8e842a2aaaac6f98078f86ba2a767
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
(cherry picked from commit 979f7fe10b2c2a921efa483afe887c7d17297fc7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>