src/assistant/assistant/centralwidget.h
@@ -94,7 +94,7 @@ public:
     void connectTabBar();
 
 public slots:
-#ifndef QT_NO_CLIPBOARD
+#if QT_CONFIG(clipboard)
     void copy();
 #endif
     void home();
@@ -127,7 +127,9 @@ public slots:
 
 signals:
     void currentViewerChanged();
+#if QT_CONFIG(clipboard)
     void copyAvailable(bool yes);
+#endif
     void sourceChanged(const QUrl &url);
     void highlighted(const QUrl &link);
     void forwardAvailable(bool available);
